[gd_scene load_steps=10 format=3 uid="uid://c6j1oqixjykw1"]

[ext_resource type="Texture2D" uid="uid://bemoh5pjkswqf" path="res://assets/backgrounds/levelBackground.png" id="1_s8srw"]
[ext_resource type="Texture2D" uid="uid://er7rx3ey1kv6" path="res://assets/UI/button/level.png" id="2_afovk"]
[ext_resource type="Script" path="res://script/level_button.gd" id="3_7vp4h"]
[ext_resource type="Texture2D" uid="uid://bf3jh3ufjiteg" path="res://assets/UI/button/level2.png" id="4_cr3n6"]
[ext_resource type="Texture2D" uid="uid://cetr57d7eqdcg" path="res://assets/UI/button/level3.png" id="5_bnom1"]
[ext_resource type="Texture2D" uid="uid://rpyqwom4dpsa" path="res://assets/UI/button/cancel_normal.png" id="5_jrddr"]
[ext_resource type="Texture2D" uid="uid://dxd34snypl6ie" path="res://assets/UI/button/level4.png" id="6_8q7nu"]
[ext_resource type="Texture2D" uid="uid://byfgnml4vxyww" path="res://assets/UI/button/cancel_press.png" id="6_i2ms3"]
[ext_resource type="Script" path="res://script/LevelChoiceButton.gd" id="9_om8ou"]

[node name="LevelChoiceWindow" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="LevelChoiceWindowLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="LevelChoiceWindowLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)

[node name="MainMove" type="Control" parent="LevelChoiceWindowLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 20.0

[node name="SecondMove" type="Control" parent="LevelChoiceWindowLayer/MainMove"]
anchors_preset = 0
offset_top = 20.0
offset_bottom = 20.0

[node name="LevelBackground" type="TextureRect" parent="LevelChoiceWindowLayer/MainMove/SecondMove"]
layout_mode = 2
offset_right = 384.0
offset_bottom = 384.0
texture = ExtResource("1_s8srw")

[node name="LevelContainer" type="VBoxContainer" parent="LevelChoiceWindowLayer/MainMove/SecondMove"]
layout_mode = 2
offset_left = 24.0
offset_top = 24.0
offset_right = 364.0
offset_bottom = 352.0
theme_override_constants/separation = 24

[node name="HBoxContainer1" type="HBoxContainer" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Level1" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1"]
layout_mode = 2
texture_normal = ExtResource("2_afovk")
script = ExtResource("3_7vp4h")
level = 1

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level2" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1"]
layout_mode = 2
texture_normal = ExtResource("2_afovk")
script = ExtResource("3_7vp4h")
level = 2

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level3" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1"]
layout_mode = 2
texture_normal = ExtResource("2_afovk")
script = ExtResource("3_7vp4h")
level = 3

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level4" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1"]
layout_mode = 2
texture_normal = ExtResource("2_afovk")
script = ExtResource("3_7vp4h")
level = 4

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level5" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1"]
layout_mode = 2
texture_normal = ExtResource("2_afovk")
script = ExtResource("3_7vp4h")
level = 5

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Level1" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_cr3n6")
script = ExtResource("3_7vp4h")
level = 6

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level2" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_cr3n6")
script = ExtResource("3_7vp4h")
level = 7

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level3" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_cr3n6")
script = ExtResource("3_7vp4h")
level = 8

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level4" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_cr3n6")
script = ExtResource("3_7vp4h")
level = 9

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level5" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_cr3n6")
script = ExtResource("3_7vp4h")
level = 10

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="HBoxContainer3" type="HBoxContainer" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Level1" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_bnom1")
script = ExtResource("3_7vp4h")
level = 11

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level2" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_bnom1")
script = ExtResource("3_7vp4h")
level = 12

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level3" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_bnom1")
script = ExtResource("3_7vp4h")
level = 13

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level4" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_bnom1")
script = ExtResource("3_7vp4h")
level = 14

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level5" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_bnom1")
script = ExtResource("3_7vp4h")
level = 15

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="HBoxContainer4" type="HBoxContainer" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Level1" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_8q7nu")
script = ExtResource("3_7vp4h")
level = 16

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level2" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_8q7nu")
script = ExtResource("3_7vp4h")
level = 17

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level3" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_8q7nu")
script = ExtResource("3_7vp4h")
level = 18

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level4" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_8q7nu")
script = ExtResource("3_7vp4h")
level = 19

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="Level5" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_8q7nu")
script = ExtResource("3_7vp4h")
level = 20

[node name="text" type="Label" parent="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0

[node name="CancelButton" type="TextureButton" parent="LevelChoiceWindowLayer/MainMove"]
layout_mode = 2
offset_left = 400.0
offset_right = 420.0
offset_bottom = 20.0
texture_normal = ExtResource("5_jrddr")
texture_pressed = ExtResource("6_i2ms3")
texture_hover = ExtResource("6_i2ms3")
script = ExtResource("9_om8ou")

[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level1" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level2" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level3" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level4" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer1/Level5" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level1" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level2" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level3" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level4" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer2/Level5" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level1" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level2" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level3" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level4" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer3/Level5" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level1" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level2" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level3" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level4" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" to="LevelChoiceWindowLayer/MainMove/SecondMove/LevelContainer/HBoxContainer4/Level5" method="_on_pressed"]
[connection signal="mouse_entered" from="LevelChoiceWindowLayer/MainMove/CancelButton" to="LevelChoiceWindowLayer/MainMove/CancelButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelChoiceWindowLayer/MainMove/CancelButton" to="LevelChoiceWindowLayer/MainMove/CancelButton" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelChoiceWindowLayer/MainMove/CancelButton" to="LevelChoiceWindowLayer/MainMove/CancelButton" method="_on_pressed"]
